--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="fof-text">
         <h1>404</h1>
-        <p>متاسفانه صفحه موردنظر یافت نشد  <a href="../../iranitheme.ir/default.htm">بازگشت به خانه</a>
+        <p>متاسفانه صفحه موردنظر یافت نشد  <a href="default.html">بازگشت به خانه</a>
     </div>
 </div>
 </body>
