--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                             <h3><i class="fa fa-phone"></i> <i class="fa fa-skype"></i> تماس با ما</h3>
 
                             <p>
-                                <strong><a href="tel:+989135137585">7585 513 0913</a></strong><br>
-                                <strong><a href="tel:+989140895692">5692 089 0914</a></strong>
+                                <strong><a href="tel:+98384268114">09384268114</a></strong><br>
+                                <strong><a href="tel:+989384268114">برای تماس ضربه بزنید</a></strong>
                             </p>
 
                         </div>
@@ -230,8 +230,8 @@
                             <h3><i class="fa fa-envelope-o"></i> برای ما بنویسید</h3>
 
                             <p>
-                                <strong><a href="mailto:info@jaguardesign.ir">info@jaguardesign.ir</a></strong><br>
-                                <strong><a href="mailto:info@jaguardesign.ir">info@jaguardesign.ir</a></strong>
+                                <strong><a
+                                <strong><a href="mailto: hsan002200@gmail.com">hsan002200@gmail.com</a></strong>
                             </p>
 
                         </div>
@@ -246,34 +246,11 @@
                         <!-- OPEN - Block contact -->
                         <div class="col-xs-12 col-sm-12 col-lg-12 block-contact">
 
-                            <h3><i class="fa fa-share-alt"></i> شبکه های اجتماعی</h3>
+                            <h3><i class="fa fa-share-alt"></i> به زودی شبکه اجتماعی را اندازه می‌شود</h3>
 
                             <!-- OPEN - Social Media -->
                             <div id="social-nav">
                                 <ul>
-                                    <!-- Facebook -->
-                                    <li data-toggle="tooltip" data-placement="bottom" data-title="ما را لایک کنید!" data-trigger="hover">
-                                        <a href="#" class="facebook-color social-media"><i class="fa fa-facebook"></i></a>
-                                    </li>
-
-                                    <!-- Twitter -->
-                                    <li data-toggle="tooltip" data-placement="bottom" data-title="مار را فالو کنید!" data-trigger="hover">
-                                        <a href="#" class="twitter-color social-media"><i class="fa fa-twitter"></i></a>
-                                    </li>
-
-                                    <!-- Flickr -->
-                                    <li data-toggle="tooltip" data-placement="bottom" data-title="ما را کشف کنید!" data-trigger="hover">
-                                        <a href="#" class="flickr-color social-media"><i class="fa fa-flickr"></i></a>
-                                    </li>
-
-                                    <!-- Soundcloud -->
-                                    <li data-toggle="tooltip" data-placement="bottom" data-title="به ما گوش دهید!" data-trigger="hover">
-                                        <a href="#" class="soundcloud-color social-media"><i class="fa fa-soundcloud"></i></a>
-                                    </li>
-
-                                    <!-- Linkedin -->
-                                    <li data-toggle="tooltip" data-placement="bottom" data-title="ما را ببینید!" data-trigger="hover">
-                                        <a href="#" class="linkedin-color social-media"><i class="fa fa-linkedin"></i></a>
                                     </li>
 
                                 </ul>
