--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
                         <div class="progress-part">
 
-                            <div class="progress-dash" style="width:99%">
-                                <span>99%</span>
+                            <div class="progress-dash" style="width:97%">
+                                <span>97%</span>
                             </div>
 
                         </div>
@@ -199,14 +199,7 @@
                     <div class="row">
 
                         <!-- OPEN - Block contact -->
-                        <div class="col-xs-12 col-sm-12 col-lg-4 block-contact">
-
-                            <h3><i class="fa fa-map-marker"></i> نشانی</h3>
-
-                            <p>
-                                <a href="https://goo.gl/maps/2eF6Z" target="_blank"><strong>بلوار مدرس</strong><br>
-                                    <strong>یزد - ایران</strong></a>
-                            </p>
+                        <div class="col-xs-12 col-sm-12 col-lg-4 block-contact"> </p>
 
                         </div>
                         <!-- CLOSE - Block contact -->
