--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <!-- OPEN - Content -->
                 <div class="item-title text-center">
 
-                    <a class="action animated-middle" href="سای" target="_blank">دانلود رزومه</a>
+                    <a class="action animated-middle" href="https://t.me/+s0dKPVNIZ9I3OWNk" target="_blank">دانلود رزومه</a>
 
                 </div>
                 <!-- CLOSE - Content -->
