--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="item-title text-center">
 
             <!-- Your logo -->
-            <img src="img/logo.png" alt="" class="logo-loading" />
+            <img src="img/logo.jpg" alt="" class="logo-loading" />
 
             <!-- Dots loading -->
             <div class="loader">
@@ -77,7 +77,7 @@
                 <div class="item-title text-center">
 
                     <!-- Your logo -->
-                    <img src="img/logo.png" alt="" class="brand-logo" />
+                    <img src="img/logo.jpg" alt="" class="brand-logo" />
 
                     <h1>به زودی می آییم</h1>
 
