--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                             <h3><i class="fa fa-phone"></i> <i class="fa fa-skype"></i> تماس با ما</h3>
 
                             <p>
-                                <strong><a href="tel:+98384268114">09384268114</a></strong><br>
-                                <strong><a href="tel:+989384268114">برای تماس ضربه بزنید</a></strong>
+                                <strong><a href="tel:+989384268114">09384268114</a></strong><br>
+                                <strong><a href="tel:09384268114">برای تماس ضربه بزنید</a></strong>
                             </p>
 
                         </div>
